# dns

./: .gitignore  AUTHORS  BUGFIX-RECURSIVE-DNS.md  CHANGELOG-SECURITY.md  ChangeLog  DNS-RATE-LIMITING.md  DNS-SECURITY-AUDIT.md  EDNS0-IMPLEMENTATION.md  Makefile.am  QUICKSTART.mysql  README  README.mysql  SECURITY-FIXES-SUMMARY.md  TODO  cloudflare.ini  configure.ac  mydns.cloudflare.conf  mydns.conf
contrib/: ACL_EXTENDED_GUIDE.md  ACL_USER_GUIDE.md  ADVANCED_PROTOCOLS_IMPLEMENTATION.md  ANSIBLE_GENERATOR_GUIDE.md  AXFR_IXFR_TSIG_COMPLETE_2025-11-26.md  AXFR_IXFR_TSIG_IMPLEMENTATION_PLAN.md  AXFR_SLAVE_GUIDE.md  DEPLOYMENT_GUIDE.md  DNSSEC_FINAL_SUMMARY.md  DNSSEC_IMPLEMENTATION_GUIDE.md  DNSSEC_TESTING_GUIDE.md  DNS_CACHE_CONFIG_HIERARCHY.md  DNS_CACHING_GUIDE.md  DOH_IMPLEMENTATION.md  FEATURES_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE_2025-11-26.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.md  MULTI_USER_FEATURES.md  MYDNS-NOTIFY.md  MYDNS_1.3.0_COMPLETE_CHANGELOG.md  MYSQL_FREE_SLAVE_GUIDE.md  NOTIFY_IXFR_IMPLEMENTATION.md  README  RECORD_TYPES_TEST_LOG.md  TSIG_COMPLETE_WORKING_2025-11-26.md  TSIG_IMPLEMENTATION_FINAL_2025-11-26.md  TSIG_INTEGRATION_COMPLETE_2025-11-26.md  WEB_UI_ACL_CACHE_IMPLEMENTATION.md  acl-extended-schema.sql  axfr-ixfr-schema.sql  axfr-notify-migration.sql  (+17 more)
src/lib/: Makefile.am  axfr.c  axfr.h  conf.c  dns-cache.c  dns-cache.h  dnssec.c  dnssec.h  dnsupdate.c  dnsupdate.h  doh.c  doh.h  geoip.c  geoip.h  memzone.c  memzone.h  mydns.h  rr.c  soa.c  sql.c  str.c  tsig.c  tsig.h  zone-masters-conf.c  zone-masters-conf.h
(+200 files in other folders)
